--- a/inference_yolo.ipynb
+++ b/inference_yolo.ipynb
@@ -2,29 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading https://github.com/ultralytics/assets/releases/download/v8.3.0/yolo11n-seg.pt to 'yolo11n-seg.pt'...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 5.90M/5.90M [00:04<00:00, 1.49MB/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ultralytics import YOLO\n",
     "\n",
     "# Load a model\n",
-    "model = YOLO(\"yolo11n-seg.pt\")  # pretrained YOLO11n model"
+    "model = YOLO(\"./runs/segment/train/weights/best.pt\")  # pretrained YOLO11n model"
    ]
   },
   {
@@ -37,14 +22,17 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "0: 448x640 (no detections), 41.6ms\n",
-      "Speed: 0.0ms preprocess, 41.6ms inference, 0.0ms postprocess per image at shape (1, 3, 448, 640)\n"
+      "image 1/1 c:\\Users\\Anthony\\Local\\cesal-proyecto\\cesal-trees-identificaction\\datasets\\avocado-yolo-format-1024px\\images\\val\\DJI_20241128120057_0016_D_SLICE_11.jpg: 640x640 2 avocados, 62.9ms\n",
+      "Speed: 5.5ms preprocess, 62.9ms inference, 27.4ms postprocess per image at shape (1, 3, 640, 640)\n"
      ]
     }
    ],
    "source": [
     "# Run batched inference on a list of images\n",
-    "results = model([\"data/trees-avocado/images/DJI_20241017094658_0066.JPG\"])  # return a list of Results objects\n",
+    "import cv2\n",
+    "\n",
+    "image = cv2.imread(\"datasets/avocado-yolo-format-1024px/images/val/DJI_20241128120057_0016_D_SLICE_11.jpg\")\n",
+    "results = model(image)  # return a list of Results objects\n",
     "\n",
     "# Process results lists\n",
     "for result in results:\n",
@@ -74,7 +62,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
